# editor-mcp

./: Dockerfile  README.md  install.sh  pyproject.toml  requirements.in  setup.py  system_prompt.md
src/text_editor/: __init__.py  server.py
tests/: conftest.py  test_server.py
