[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "editor-mcp"
version = "0.1.0"
description = "A Python-based text editor server built with FastMCP"
readme = "README.md"
authors = [
    {name = "Daniel Podrażka", email = "build@daniep.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "black",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
editor-mcp = "text_editor.server:main"

[project.urls]
"Homepage" = "https://github.com/danielpodrazka/editor-mcp"
"Bug Tracker" = "https://github.com/danielpodrazka/editor-mcp/issues"