[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-editor"
version = "0.1.0"
description = "A Python-based text editor server built with FastMCP"
readme = "README.md"
authors = [
    {name = "Daniel Podrażka", email = "build@daniep.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "black",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
text-editor = "text_editor.server:main"

[project.urls]
"Homepage" = "https://github.com/danielpodrazka/text-editor"
"Bug Tracker" = "https://github.com/danielpodrazka/text-editor/issues"